@@ -31,6 +31,7 @@ FIX:        Minor code improvements
 FEATURE:    Add cmake support
 FIX:        Add missing driver.mk to SSD1322 driver.
 FEATURE:    LGDP4532 driver improvements.
+FIX:        Win32 Keyboard driver now retrieves lock key states on window activate
 
 
 *** Release 2.9 ***
